    as cross referencing against herds the table is in [GSM]

  - Fix an error wher validate_sync tries to recreate an existing trigger; 
    occured when a fullcopy sync was set to ping=true [GSM]

  - When using "bucardo_ctl add all tables db=<name>", make sure we only 
    look for the already added tables for that specific database.
    [Selena Deckelmann and Josh Tolley]

  - When using "bucardo_ctl add all tables", ignore any tables inside 
    schemas starting with 'bucardo' [GSM]

  - Allow --verbose flag for list syncs to show linked tables [GSM]

  - Allow --verbose flag for list tables to show linked herds and syncs [GSM]

  - Change rebuild_index to a smallint: a 1 only runs it with a fullcopy.
    If you really want to use it otherwise, set it to 2 [GSM]


Bucardo version 4.0.3, released September 16, 2009

  - Fix some minor problems with bucardo_ctl and "add sync" [GSM]

  - Allow ping to be specified for new tables added via "add sync" [GSM]


Bucardo version 4.0.2, released September 16, 2009

  - Add the name of the database to the install choices, as some systems 
    have mismatched names (BSD's 'pgsql' user) [Vilem Kebrt]

  - Clear out stale q entries on startup, created when a kid was hit with a 
    kill -9. This was causing Bucardo to think the q slot was still active. [GSM]

  - Fix cases where we were not quoting the UNLISTEN names [GSM]

  - Remove duplicate PID numbers from log [GSM]

  - Prohibit syncs from having names reserved for synctypes. [GSM]

  - Add new delete method of "truncate_cascade" for syncs [GSM]

  - Allow "foo*", "*foo", and "*foo*" wildcard format in bucardo_ctl 
    when specifying syncs, e.g. bucardo_ctl kick ABC* [GSM]

  - Allow special cases for bucardo_ctl kick: "all [synctype] [active]" [GSM]

  - Allow filtering of 'bucardo_ctl list syncs' by synctype [GSM]

  - Allow 'bucardo_ctl add sync tables=...' to work with schema.table format [GSM]
