@@ -327,7 +327,7 @@ sub help {
 
   add <item_type> <item_name>
                   ** Add a new database, table, sync, herd, or database group
-    add database <dbname> name=internal_name port=xxx host=xxx user=xxx pass=xxx service=xxx conn=xxx sourcelimit=xxx targetlimit=xxx
+    add database <dbname> name=internal_name port=xxx host=xxx user=xxx pass=xxx service=xxx conn=xxx sourcelimit=xxx targetlimit=xxx ssp=1/0
     add dbgroup name db1 db2 db3 ...
     add table [schema].table db=internal_db_name [ping=bool] [standard_conflict=xxx] [makedelta=bool]
     add all tables [db=internal_db_name] [herd=herd_name] [-n=schema] [-t=table]
@@ -821,6 +821,7 @@ sub update {
 		$arg =~ /(.+)=(.+)/ or die "Invalid argument: must be of form name=value\n";
 		my ($n,$v) = (lc $1,$2);
 		$n =~ /^\w+$/ or die "Invalid name\n";
+		$n = 'server_side_prepares' if $n eq 'ssp';
 		for my $row (@$info) {
 			my $localname = $tabname eq 'goat' ? "$row->{schemaname}.$row->{tablename}" : $row->{name};
 			my $localid = $tabname eq 'goat' ? $row->{id} : $row->{name};
@@ -1799,7 +1800,11 @@ sub list_dbs {
 				$maxlim1, $row->{sourcelimit},
 				$maxlim2, $row->{targetlimit},
 		}
-		print "Conn: psql -h $row->{dbhost} -p $row->{dbport} -U $row->{dbuser} -d $row->{dbname}\n";
+		print "Conn: psql -h $row->{dbhost} -p $row->{dbport} -U $row->{dbuser} -d $row->{dbname}";
+		if (! $row->{server_side_prepares}) {
+			print " (SSP is off)";
+		}
+		print "\n";
 	}
 
 	exit 0;
@@ -2721,21 +2726,22 @@ sub upgrade {
 	);
 
 	my @new_columns = (
-		['bucardo', 'audit_pid', 'id',              q{INTEGER NOT NULL DEFAULT nextval('audit_pid_id_seq')}],
-		['bucardo', 'audit_pid', 'parentid',        q{INTEGER     NULL}],
-		['bucardo', 'audit_pid', 'familyid',        q{INTEGER     NULL}],
-		['bucardo', 'audit_pid', 'source',          q{TEXT        NULL}],
-		['bucardo', 'audit_pid', 'target',          q{TEXT        NULL}],
-		['bucardo', 'audit_pid', 'master_backend',  q{INT     NOT NULL DEFAULT pg_backend_pid()}],
-		['bucardo', 'audit_pid', 'source_backend',  q{INT         NULL}],
-		['bucardo', 'audit_pid', 'target_backend',  q{INT         NULL}],
-		['bucardo', 'db',        'dbservice',       q{TEXT        NULL}],
-		['bucardo', 'goat',      'qpkey',           q{TEXT        NULL}],
-		['bucardo', 'sync',      'lifetime',        q{INTERVAL NULL}],
-		['bucardo', 'sync',      'maxkicks',        q{INTEGER NOT NULL DEFAULT 0}],
-		['bucardo', 'sync',      'onetimecopy',     q{SMALLINT NOT NULL DEFAULT 0}],
-		['bucardo', 'sync',      'strict_checking', q{BOOLEAN NOT NULL DEFAULT 'true'}],
-		['bucardo', 'sync',      'track_rates',     q{BOOLEAN NOT NULL DEFAULT 'false'}],
+		['bucardo', 'audit_pid', 'id',                   q{INTEGER NOT NULL DEFAULT nextval('audit_pid_id_seq')}],
+		['bucardo', 'audit_pid', 'parentid',             q{INTEGER     NULL}],
+		['bucardo', 'audit_pid', 'familyid',             q{INTEGER     NULL}],
+		['bucardo', 'audit_pid', 'source',               q{TEXT        NULL}],
+		['bucardo', 'audit_pid', 'target',               q{TEXT        NULL}],
+		['bucardo', 'audit_pid', 'master_backend',       q{INT     NOT NULL DEFAULT pg_backend_pid()}],
+		['bucardo', 'audit_pid', 'source_backend',       q{INT         NULL}],
+		['bucardo', 'audit_pid', 'target_backend',       q{INT         NULL}],
+		['bucardo', 'db',        'dbservice',            q{TEXT        NULL}],
+		['bucardo', 'db',        'server_side_prepares', q{BOOLEAN NOT NULL DEFAULT 'true'}],
+		['bucardo', 'goat',      'qpkey',                q{TEXT        NULL}],
+		['bucardo', 'sync',      'lifetime',             q{INTERVAL NULL}],
+		['bucardo', 'sync',      'maxkicks',             q{INTEGER NOT NULL DEFAULT 0}],
+		['bucardo', 'sync',      'onetimecopy',          q{SMALLINT NOT NULL DEFAULT 0}],
+		['bucardo', 'sync',      'strict_checking',      q{BOOLEAN NOT NULL DEFAULT 'true'}],
+		['bucardo', 'sync',      'track_rates',          q{BOOLEAN NOT NULL DEFAULT 'false'}],
 
 		['freezer', 'old_audit_pid', 'id',              q{INTEGER}],
 		['freezer', 'old_audit_pid', 'parentid',        q{INTEGER}],
@@ -3184,7 +3190,7 @@ sub upgrade_and_log {
 sub add_database {
 
 	## Usage: add database <dbname> name=internal_name port=xxx host=xxx user=xxx pass=xxx
-	## service=xxx conn=xxx sourcelimit=xxx targetlimit=xxx
+	## service=xxx conn=xxx sourcelimit=xxx targetlimit=xxx ssp=xxx
 
 	## The first word is the name of the database we connect to (column dbname)
 	my $item_name = shift @nouns || '';
@@ -3207,11 +3213,13 @@ sub add_database {
 			   service     => ['',         'dbservice'],
 			   sourcelimit => ['',         ''],
 			   targetlimit => ['',         ''],
+			   server_side_prepares => ['1', ''],
 			   );
 	my $args = process_args($info);
 	for my $name (sort keys %$args) {
 		next if $name eq 'extraargs';
 		my $value = $args->{$name};
+		$name = 'server_side_prepares' if $name eq 'ssp';
 		if (!exists $arg{$name}) {
 			die "Unknown option '$name'\n";
 		}
@@ -3219,11 +3227,10 @@ sub add_database {
 	}
 	$arg{dbname} = [$item_name,''];
 
-	## Lots of checks go here...
-
 	my ($cols,$phs) = ('','');
 	my @vals;
 	for my $col (sort keys %arg) {
+		$col = 'server_side_prepares' if $col eq 'ssp';
 		next if ! length $arg{$col}[0];
 		my $name = $arg{$col}[1] || $col;
 		$cols .= "$name,";
@@ -4682,7 +4689,7 @@ after the type will look up all matching entries.
 
 Usage:  add <item_type> <item_name>
 
-Usage:  add database <dbname> name=internal_name port=xxx host=xxx user=xxx pass=xxx service=xxx conn=xxx sourcelimit=xxx targetlimit=xxx
+Usage:  add database <dbname> name=internal_name port=xxx host=xxx user=xxx pass=xxx service=xxx conn=xxx sourcelimit=xxx targetlimit=xxx ssp=1/0
 
 Usage:  add table [schema].table db=internal_db_name ping=bool standard_conflict=xxx makedelta=bool herd=xxx
 
